--- a/KrampusHack2023.cbp
+++ b/KrampusHack2023.cbp
@@ -154,16 +154,22 @@
 		<Unit filename="include/Component.hpp" />
 		<Unit filename="include/ExMokkan.hpp" />
 		<Unit filename="include/Game.hpp" />
+		<Unit filename="include/GameScene.hpp" />
 		<Unit filename="include/Hexagon.hpp" />
+		<Unit filename="include/Intro.hpp" />
 		<Unit filename="include/Resources.hpp" />
 		<Unit filename="include/Scene.hpp" />
+		<Unit filename="include/Story.hpp" />
 		<Unit filename="include/Territory.hpp" />
 		<Unit filename="src/CommandModule.cpp" />
 		<Unit filename="src/Component.cpp" />
 		<Unit filename="src/Game.cpp" />
+		<Unit filename="src/GameScene.cpp" />
 		<Unit filename="src/Hexagon.cpp" />
+		<Unit filename="src/Intro.cpp" />
 		<Unit filename="src/Resources.cpp" />
 		<Unit filename="src/Scene.cpp" />
+		<Unit filename="src/Story.cpp" />
 		<Unit filename="src/Territory.cpp" />
 		<Extensions />
 	</Project>
